Fix colour contrast issues

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -49,7 +49,6 @@ a {
 
 	&:hover, &:focus {
 		color: $link-highlight-color;
-		text-decoration: none;
 	}
 }
 
