--- a/assets/scss/mixins/_vars.scss
+++ b/assets/scss/mixins/_vars.scss
@@ -2,43 +2,45 @@
 COLORS
 *********************/
 
-$black:				#000;
-$white:				#fff;
+$black:				  #000;
+$white:				  #fff;
 $dark-grey:			#444444;
 $med-grey:			#797979;
-$light-med-grey:	#9eabb3;
+$light-med-grey:#9eabb3;
 $light-grey:		#e7e7e8;
-$lighter-grey:		#efefef;
-$lightest-grey:		#f7fafb;
+$lighter-grey:	#efefef;
+$lightest-grey:	#f7fafb;
 
 $light-green:		#8dc63f;
 $dark-green:		#00753d;
 $turqoise:			#16a796;
 $light-blue:		#1a82c5;
-$blue:				#1990db;
+$blue:				  #1990db;
 $dark-purple:		#653090;
-$light-purple:		#9d316f;
-$pink:				#f01d4f;
+$light-purple:	#9d316f;
+$pink:				  #f01d4f;
 $light-red:			#ed1c24;
-$orange:			#f26c25;
-$yellow:			#facc10;
+$orange:			  #f26c25;
+$yellow:			  #facc10;
 
-$main-header-color:				$dark-grey;
+$main-header-color: $dark-grey;
 $main-header-highlight-color:	darken($dark-grey, 20%);
 
-$nav-color: 					$dark-grey;
-$nav-highlight-color:			$blue;
+$nav-color: $dark-grey;
+$nav-highlight-color:	$blue;
 
-$link-color:					$blue;
-$link-highlight-color:			darken($link-color, 9%);
+$link-color: #0063a2;
+$link-highlight-color: darken($link-color, 10%);
 
-$select-blue: 					lighten($blue, 10%);
-$highlight-color:				#ffc336;
+$footer-color: #737373;
+
+$select-blue: lighten($blue, 10%);
+$highlight-color: #ffc336;
 
 /*********************
 TYPOGRAPHY
 *********************/
 
-$roboto:			"Roboto", Helvetica, Arial, sans-serif;
-$sans-serif:		"Helvetica Neue", Helvetica, Arial, sans-serif;
-$serif:				"Georgia", Cambria, Times New Roman, Times, serif;
+$roboto: "Roboto", Helvetica, Arial, sans-serif;
+$sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$serif: "Georgia", Cambria, Times New Roman, Times, serif;
